--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "axios": "^1.6.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-number-format": "^5.3.4",
     "react-rating": "^2.0.5",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
